# meshai-mcp

./: .env.template  .gitignore  CLAUDE_DESKTOP_CONFIG.md  Dockerfile  Dockerfile.dev  README.md  README_AUTH.md  app.py  claude-desktop-proxy.py  claude-desktop-proxy.sh  deploy-with-api-key.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  verify.sh
.github/workflows/: docker-build.yml  publish-pypi.yml
src/meshai_mcp/: __init__.py  cli.py  config.py  gateway_client.py  http_server.py  protocol.py  server.py  tenant_context.py
src/meshai_mcp/auth/: __init__.py  client.py  middleware.py  models.py  rate_limiter.py
src/meshai_mcp/models/: __init__.py  database.py
tests/: test_auth_integration.py  test_mcp_server.py
